@@ -367,11 +367,10 @@ class CmdLineTest(unittest.TestCase):
         # Mac OS X denies the creation of a file with an invalid UTF-8 name.
         # Windows allows to create a name with an arbitrary bytes name, but
         # Python cannot a undecodable bytes argument to a subprocess.
-        #if (support.TESTFN_UNDECODABLE
-        #and sys.platform not in ('win32', 'darwin')):
-        #    name = os.fsdecode(support.TESTFN_UNDECODABLE)
-        #elif support.TESTFN_NONASCII:
-        if support.TESTFN_NONASCII:
+        if (support.TESTFN_UNDECODABLE
+        and sys.platform not in ('win32', 'darwin')):
+            name = os.fsdecode(support.TESTFN_UNDECODABLE)
+        elif support.TESTFN_NONASCII:
             name = support.TESTFN_NONASCII
         else:
             self.skipTest("need support.TESTFN_NONASCII")
